Fix policy mode tooltip z-index rendering bug

--- a/css/common.css
+++ b/css/common.css
@@ -243,7 +243,7 @@ label {
     font-size: 12px;
     font-weight: normal;
     line-height: 1.4;
-    background: rgba(66, 66, 66, .90);
+    background: rgba(66, 66, 66, .95);
     max-width: 320px;
     padding: 12px;
 }
